[tool.poetry]
name = "demo-python-keylogger"
version = "0.1.0"
description = ""
authors = ["natthasath <natthasath.sak@gmail.com>"]
license = "MIT LIcense"
readme = "README.md"
packages = [{include = "demo_python_keylogger"}]

[tool.poetry.dependencies]
python = "^3.10"
pynput = "^1.7.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
